Improved preview interaction, added individual color locks.

--- a/include/colorsample.html
+++ b/include/colorsample.html
@@ -35,7 +35,7 @@
 	</HEAD>
 	<BODY style="color7_background">
 		<div class="header" style="color1_background color2_foreground">
-			Site Title
+			Site Colors Preview
 		</div>
 		<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
