Site Color picker now behaves exactly like we want it to.

--- a/include/colorsample.html
+++ b/include/colorsample.html
@@ -19,33 +19,42 @@
 			
 			.menu
 			{
-				width: 20%;
+				width: 30%;
+				font-size: 0.8em;
+			}
+			
+			.menu div
+			{
 				padding-left: 5px;
 				padding-right: 20px; 
-				font-size: 0.8em;
+				padding-top: 2px;
+				padding-bottom: 2px;
 			}
 			
 			.content
 			{
-				width: 80%;
+				width: 70%;
 				padding-left: 10px;
 				font-size: 0.8em;
 			}
 		</style>
 	</HEAD>
-	<BODY style="color7_background">
-		<div class="header" style="color1_background color2_foreground">
+	<BODY style="color4_background">
+		<div class="header" style="color1_background color5_foreground">
 			Site Colors Preview
 		</div>
 		<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-				<td valign="top" class="menu" style="color3_background color5_foreground">
-					<p>Menu&nbsp;Item</p>
+				<td valign="top" class="menu" style="color2_background color5_foreground">
+					<div>First Item</div>
+					<div style="color3_background">Second Item</div>
+					<div>Third Item</div>				
 				</td>
-				<td valign="top" class="content" style="color8_foreground">
-					<p>Lorem ipsum dolor sit amet, <span style="color2_foreground">consectetur adipiscing elit</span>. Donec semper magna sit amet leo. Nunc tellus. <span style="color4_foreground">Sed dolor elit</span>, semper a, feugiat varius, aliquet ut, mi. Nunc condimentum magna sed quam. Aenean non diam. Donec malesuada semper ipsum. Ut posuere imperdiet sem.</p>
+				<td valign="top" class="content" style="color5_foreground">
+					<p>Lorem ipsum dolor sit amet, <span style="color6_foreground">consectetur adipiscing elit</span>. Donec semper magna sit amet leo. Nunc tellus. Sed dolor elit, semper a, feugiat varius, aliquet ut, mi. Nunc condimentum magna sed quam. Aenean non diam. Donec malesuada semper ipsum. Ut posuere imperdiet sem.</p>
+					<p style="color5_foreground"><b>Maecenas quis eros</b></p>
 					<p>Duis vitae neque eget neque cursus cursus. Quisque luctus, est ut ornare mollis, ante nisl malesuada ante, lobortis posuere pede est at odio. Quisque ac augue. Cras massa diam, volutpat eget, congue a, ullamcorper a, nunc. Sed lorem nisl, varius vitae, pretium a, pulvinar sit amet, elit.</p>
-					<p>Maecenas quis eros. Praesent laoreet tortor eu est. Etiam ultrices, ante quis lobortis consequat, augue arcu bibendum nisi, a ultricies ante velit ac ipsum. Vivamus bibendum lectus sit amet odio. Curabitur libero lacus, adipiscing a, aliquam vitae, euismod et, odio. Ut felis orci, vehicula in, convallis sed, molestie nec, erat.</p>
+					<p>Praesent laoreet tortor eu est. Etiam ultrices, ante quis lobortis consequat, augue arcu bibendum nisi, a ultricies ante velit ac ipsum. Vivamus bibendum lectus sit amet odio. Curabitur libero lacus, adipiscing a, aliquam vitae, euismod et, odio. Ut felis orci, vehicula in, convallis sed, molestie nec, erat.</p>
 				</td>
 			</tr>
 		</table>
